--- a/generate.html
+++ b/generate.html
@@ -11,18 +11,38 @@
     <h2>输入内容生成加密二维码</h2>
     <input type="text" id="textInput" placeholder="输入内容" style="width:70%;">
     <button id="encryptBtn">生成二维码</button>
-    <div id="qrcode" style="margin-top:10px;"></div>
+    <br><br>
+    <canvas id="qrcodeCanvas"></canvas>
+    <br>
+    <button id="downloadBtn" style="display:none;">下载二维码</button>
 
     <script>
-        const secretKey = "123456"; // 加密秘钥
+        const secretKey = "123456"; // 加密密钥
+
+        const canvas = document.getElementById('qrcodeCanvas');
+        const downloadBtn = document.getElementById('downloadBtn');
 
         document.getElementById('encryptBtn').addEventListener('click', () => {
             const text = document.getElementById('textInput').value;
-            if(!text) return alert("请输入内容");
+            if (!text) return alert("请输入内容");
+
             const encrypted = CryptoJS.AES.encrypt(text, secretKey).toString();
-            QRCode.toCanvas(document.getElementById('qrcode'), encrypted, { width: 200 }, function (error) {
-                if (error) console.error(error);
+
+            QRCode.toCanvas(canvas, encrypted, { width: 200 }, function (error) {
+                if (error) {
+                    console.error(error);
+                    alert("二维码生成失败");
+                } else {
+                    downloadBtn.style.display = "inline-block";
+                }
             });
+        });
+
+        downloadBtn.addEventListener('click', () => {
+            const link = document.createElement('a');
+            link.href = canvas.toDataURL("image/png");
+            link.download = "qrcode.png";
+            link.click();
         });
     </script>
 </body>
