--- a/scan.html
+++ b/scan.html
@@ -9,15 +9,20 @@
 </head>
 <body>
     <h2>扫码解密二维码</h2>
-    <div id="reader" style="width:300px;"></div>
+
+    <button id="startBtn">启动摄像头</button>
+    <button id="stopBtn" disabled>停止摄像头</button>
+    <div id="reader" style="width:300px; margin-top:10px;"></div>
+
     <p>解密内容: <span id="decryptedText"></span></p>
 
     <script>
         const secretKey = "123456"; // 必须和生成二维码页面一致
+        const html5QrcodeScanner = new Html5Qrcode("reader");
 
         function onScanSuccess(decodedText, decodedResult) {
             try {
-                const bytes  = CryptoJS.AES.decrypt(decodedText, secretKey);
+                const bytes = CryptoJS.AES.decrypt(decodedText, secretKey);
                 const originalText = bytes.toString(CryptoJS.enc.Utf8);
                 document.getElementById('decryptedText').innerText = originalText || "解密失败";
             } catch(e) {
@@ -25,12 +30,29 @@
             }
         }
 
-        const html5QrcodeScanner = new Html5Qrcode("reader");
-        html5QrcodeScanner.start(
-            { facingMode: "environment" },
-            { fps: 10, qrbox: 250 },
-            onScanSuccess
-        );
+        // 启动摄像头
+        document.getElementById('startBtn').addEventListener('click', () => {
+            html5QrcodeScanner.start(
+                { facingMode: "environment" },
+                { fps: 10, qrbox: 250 },
+                onScanSuccess
+            ).then(() => {
+                document.getElementById('startBtn').disabled = true;
+                document.getElementById('stopBtn').disabled = false;
+            }).catch(err => {
+                alert("启动摄像头失败: " + err);
+            });
+        });
+
+        // 停止摄像头
+        document.getElementById('stopBtn').addEventListener('click', () => {
+            html5QrcodeScanner.stop().then(() => {
+                document.getElementById('startBtn').disabled = false;
+                document.getElementById('stopBtn').disabled = true;
+            }).catch(err => {
+                alert("停止摄像头失败: " + err);
+            });
+        });
     </script>
 </body>
 </html>
