--- a/scan.html
+++ b/scan.html
@@ -2,10 +2,10 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>二维码解密扫描</title>
+    <title>扫码解密二维码</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-        body { font-family: Arial, sans-serif; text-align: center; margin: 0; padding: 20px; }
+        body { font-family: Arial, sans-serif; text-align: center; margin: 20px; }
         video { width: 100%; max-width: 400px; border: 1px solid #ccc; }
         #result { margin-top: 20px; font-size: 1.2em; color: green; word-break: break-all; }
     </style>
@@ -15,17 +15,17 @@
     <video id="video" autoplay></video>
     <div id="result">请对准二维码进行扫描...</div>
 
-    <!-- CryptoJS -->
+    <!-- 引入库 -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
-    <!-- jsQR -->
     <script src="https://cdn.jsdelivr.net/npm/jsqr/dist/jsQR.js"></script>
+
     <script>
         const video = document.getElementById('video');
         const resultDiv = document.getElementById('result');
         const canvas = document.createElement('canvas');
         const ctx = canvas.getContext('2d');
 
-        const AES_KEY = "your-secret-key"; // 这里和 generate.html 的密钥一致
+        const secretKey = "123456"; // 和 generate.html 一致
 
         // 打开摄像头
         navigator.mediaDevices.getUserMedia({ video: { facingMode: "environment" } })
@@ -33,13 +33,13 @@
                 video.srcObject = stream;
                 video.setAttribute("playsinline", true); // iOS 支持
                 video.play();
-                requestAnimationFrame(tick);
+                requestAnimationFrame(scan);
             })
             .catch(err => {
                 resultDiv.textContent = "无法打开摄像头: " + err;
             });
 
-        function tick() {
+        function scan() {
             if (video.readyState === video.HAVE_ENOUGH_DATA) {
                 canvas.width = video.videoWidth;
                 canvas.height = video.videoHeight;
@@ -49,16 +49,15 @@
 
                 if (code) {
                     try {
-                        // AES 解密
-                        const bytes = CryptoJS.AES.decrypt(code.data, AES_KEY);
+                        const bytes = CryptoJS.AES.decrypt(code.data, secretKey);
                         const decryptedText = bytes.toString(CryptoJS.enc.Utf8);
                         resultDiv.textContent = "解密内容: " + decryptedText;
                     } catch (e) {
                         resultDiv.textContent = "解密失败: " + e;
                     }
-                } 
+                }
             }
-            requestAnimationFrame(tick);
+            requestAnimationFrame(scan);
         }
     </script>
 </body>
