--- a/scan.html
+++ b/scan.html
@@ -6,16 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body { font-family: Arial, sans-serif; text-align: center; margin: 20px; }
-        video { width: 100%; max-width: 400px; border: 1px solid #ccc; margin-top: 10px; }
+        video { width: 100%; max-width: 400px; border: 1px solid #ccc; margin-top: 10px; display: none; }
         #result { margin-top: 20px; font-size: 1.2em; color: green; word-break: break-all; }
         button { margin: 10px; padding: 8px 16px; font-size: 1em; }
     </style>
 </head>
 <body>
     <h2>扫码解密二维码</h2>
+
     <button id="toggleCameraBtn">开启摄像头</button>
-    <video id="video" autoplay style="display:none;"></video>
-    <div id="result">摄像头未开启</div>
+    <input type="file" id="fileInput" accept="image/*">
+    <video id="video" autoplay></video>
+    <div id="result">请选择扫描方式</div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jsqr/dist/jsQR.js"></script>
@@ -24,6 +26,7 @@
         const video = document.getElementById('video');
         const resultDiv = document.getElementById('result');
         const toggleBtn = document.getElementById('toggleCameraBtn');
+        const fileInput = document.getElementById('fileInput');
         const canvas = document.createElement('canvas');
         const ctx = canvas.getContext('2d');
         const secretKey = "123456"; // 与 generate.html 一致
@@ -31,7 +34,7 @@
         let scanning = false;
         let stream;
 
-        // 开关摄像头
+        // 摄像头开关
         toggleBtn.addEventListener('click', () => {
             if (scanning) {
                 stopCamera();
@@ -45,7 +48,7 @@
                 .then(s => {
                     stream = s;
                     video.srcObject = stream;
-                    video.setAttribute("playsinline", true); // iOS 支持
+                    video.setAttribute("playsinline", true);
                     video.style.display = 'block';
                     video.play();
                     scanning = true;
@@ -80,19 +83,48 @@
                 const code = jsQR(imageData.data, imageData.width, imageData.height);
 
                 if (code) {
-                    try {
-                        const decrypted = CryptoJS.AES.decrypt(code.data, secretKey).toString(CryptoJS.enc.Utf8);
-                        if (decrypted) {
-                            resultDiv.textContent = "解密内容: " + decrypted;
-                        } else {
-                            resultDiv.textContent = "扫描到内容，但解密失败";
-                        }
-                    } catch (e) {
-                        resultDiv.textContent = "解密错误: " + e;
-                    }
+                    decryptAndShow(code.data);
                 }
             }
             requestAnimationFrame(scan);
+        }
+
+        // 上传图片扫描
+        fileInput.addEventListener('change', event => {
+            const file = event.target.files[0];
+            if (!file) return;
+            const reader = new FileReader();
+            reader.onload = e => {
+                const img = new Image();
+                img.onload = () => {
+                    canvas.width = img.width;
+                    canvas.height = img.height;
+                    ctx.drawImage(img, 0, 0);
+                    const imageData = ctx.getImageData(0, 0, canvas.width, canvas.height);
+                    const code = jsQR(imageData.data, imageData.width, imageData.height);
+                    if (code) {
+                        decryptAndShow(code.data);
+                    } else {
+                        resultDiv.textContent = "未识别到二维码";
+                    }
+                };
+                img.src = e.target.result;
+            };
+            reader.readAsDataURL(file);
+        });
+
+        // 解密并显示
+        function decryptAndShow(encryptedText) {
+            try {
+                const decrypted = CryptoJS.AES.decrypt(encryptedText, secretKey).toString(CryptoJS.enc.Utf8);
+                if (decrypted) {
+                    resultDiv.textContent = "解密内容: " + decrypted;
+                } else {
+                    resultDiv.textContent = "扫描到内容，但解密失败";
+                }
+            } catch (e) {
+                resultDiv.textContent = "解密错误: " + e;
+            }
         }
     </script>
 </body>
